move code from sql to esql module